<resources>
    <string name="app_name">NetworkRequestEx</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="title_volley">Volley</string>
    <string name="title_callback">Callback</string>
    <string name="title_coroutine">Coroutine</string>
    <string name="title_retrofit">Retrofit</string>
    <string name="title_rxretrofit">RxRetrofit</string>
    <string name="time_elapsed">Elapsed:</string>
</resources>
