<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="layout"
            type="com.ctyeung.networkrequestex.MainActivity"/>
    </data>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:layout_width="@dimen/title_width"
                android:layout_height="wrap_content"
                android:id="@+id/btnVolley"
                android:text="@string/title_volley"
                android:layout_margin="@dimen/margin"
                android:onClick="@{()->layout.onClickVolley()}"/>

            <TextView
                android:layout_width="@dimen/size_width"
                android:layout_height="wrap_content"
                android:id="@+id/txtVolleyUserCount"
                android:text="0"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:layout_width="@dimen/title_width"
                android:layout_height="wrap_content"
                android:id="@+id/btnCallback"
                android:layout_margin="@dimen/margin"
                android:text="@string/title_callback"
                android:onClick="@{()->layout.onClickCallback()}"/>

            <TextView
                android:layout_width="@dimen/size_width"
                android:layout_height="wrap_content"
                android:id="@+id/txtCallbackUserCount"
                android:text="0"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:layout_width="@dimen/title_width"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:id="@+id/btnCoroutine"
                android:text="@string/title_coroutine"
                android:onClick="@{()->layout.onClickCoroutine()}"/>

            <TextView
                android:layout_width="@dimen/size_width"
                android:layout_height="wrap_content"
                android:id="@+id/txtCoroutineUserCount"
                android:text="0"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:layout_width="@dimen/title_width"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:id="@+id/btnRetrofit"
                android:text="@string/title_retrofit"
                android:onClick="@{()->layout.onClickRetrofit()}"/>

            <TextView
                android:layout_width="@dimen/size_width"
                android:layout_height="wrap_content"
                android:id="@+id/txtRetrofitUserCount"
                android:text="0"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:layout_width="@dimen/title_width"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:id="@+id/btnRxRetrofit"
                android:text="@string/title_rxretrofit"
                android:onClick="@{()->layout.onClickRxRetrofit()}"/>

            <TextView
                android:layout_width="@dimen/size_width"
                android:layout_height="wrap_content"
                android:id="@+id/txtRxRetrofitUserCount"
                android:text="0"/>

        </LinearLayout>


    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>